<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        app:cardUseCompatPadding="true"
        app:cardElevation="3dp"
        android:layout_height="wrap_content"
>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/name_with_colon"
                  android:id="@+id/workerNameTitle"
                  app:layout_constraintTop_toTopOf="parent"
                  android:layout_marginTop="10dp"
                  android:layout_marginBottom="5dp"
                  android:paddingStart="10dp"
                  app:layout_constraintStart_toStartOf="parent"
                  tools:ignore="RtlSymmetry"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="22dp"
                  android:id="@+id/workerName"
                  app:layout_constraintTop_toTopOf="@id/workerNameTitle"
                  android:layout_marginStart="5dp"
                  android:textStyle="bold"
                  app:layout_constraintStart_toEndOf="@id/workerNameTitle"
                  tools:text="@tools:sample/full_names"
        />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/role_with_colon"
                  android:id="@+id/workerRoleTitle"
                  app:layout_constraintTop_toBottomOf="@+id/workerNameTitle"
                  android:layout_marginTop="5dp"
                  android:layout_marginBottom="10dp"
                  android:paddingStart="10dp"
                  app:layout_constraintStart_toStartOf="parent"
                  tools:ignore="RtlSymmetry"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="16dp"
                  android:id="@+id/workerRole"
                  app:layout_constraintTop_toTopOf="@id/workerRoleTitle"
                  android:layout_marginStart="5dp"
                  android:textStyle="bold"
                  app:layout_constraintStart_toEndOf="@id/workerRoleTitle"
                  tools:text="@tools:sample/full_names"
        />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/inventory_with_colon"
                  android:id="@+id/workerInventoryTitle"
                  app:layout_constraintTop_toBottomOf="@+id/workerRoleTitle"
                  android:layout_marginTop="5dp"
                  android:paddingBottom="10dp"
                  android:paddingStart="10dp"
                  app:layout_constraintStart_toStartOf="parent"
                  tools:ignore="RtlSymmetry"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/workerInventory"
                  app:layout_constraintTop_toTopOf="@id/workerInventoryTitle"
                  android:layout_marginStart="5dp"
                  android:textStyle="bold"
                  app:layout_constraintStart_toEndOf="@id/workerInventoryTitle"
                  tools:text="@tools:sample/cities"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>