<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ContentDescription"
        android:padding="16dp">

    <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="10dp"
            android:text="@string/welcome"/>

    <TextView
            android:id="@+id/welcomeTextCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/welcomeText"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintStart_toStartOf="@id/welcomeText"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/welcome_caption"/>

    <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/javaCard"
            style="@style/CardView.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginTop="18dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@id/welcomeTextCaption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/javaImage"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintDimensionRatio="H,20.4:8.44"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/java_header"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/javaText"
                    app:layout_constraintVertical_chainStyle="packed"/>

            <TextView
                    android:id="@+id/javaText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/java_title"
                    android:layout_marginBottom="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#DE000000"
                    android:lineSpacingExtra="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/javaImage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/kotlinCard"
            style="@style/CardView.Light"
            android:layout_width="0dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/javaCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/kotlinImage"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintDimensionRatio="H,20.4:8.44"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/kotlin_header"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/kotlinTxt"
                    app:layout_constraintVertical_chainStyle="packed"/>

            <TextView
                    android:id="@+id/kotlinTxt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/kotlin_title"
                    android:layout_marginBottom="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#DE000000"
                    android:lineSpacingExtra="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/kotlinImage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
